# telloDroneRacing

./: README  package.xml  setup.cfg  setup.py
launch/: launch_sim.py  launch_teleop.py
src/: __init__.py  image_proc.py  target_detect.py
telloDroneRacing/: controller.py  target_detect.py
