<?xml version="1.0"?>
<package format="3">
  <name>telloDroneRacing</name>
  <version>0.0.0</version>
  <description>Drone racing controller package</description>
  <maintainer email="ut@todo.todo">ut</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tello_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
